sys/src/functions.rs

use libc::{c_char, c_double, c_int, c_uchar, c_uint, c_void, size_t};
use crate::types::*;

extern "C" {
    pub fn initGEOS(nf: GEOSMessageHandler, ef: GEOSMessageHandler);
    pub fn GEOSversion() -> *const c_char;
    pub fn finishGEOS();

    // API for reading WKT:
    pub fn GEOSWKTReader_create() -> *mut GEOSWKTReader;
    pub fn GEOSWKTReader_destroy(reader: *mut GEOSWKTReader);
    pub fn GEOSWKTReader_read(reader: *mut GEOSWKTReader, wkt: *const c_char) -> *mut GEOSGeometry;

    // API for writing WKT:
    pub fn GEOSWKTWriter_create() -> *mut GEOSWKTWriter;
    pub fn GEOSWKTWriter_destroy(writer: *mut GEOSWKTWriter);
    pub fn GEOSWKTWriter_write(writer: *mut GEOSWKTWriter, g: *const GEOSGeometry) -> *mut c_char;
    pub fn GEOSWKTWriter_setRoundingPrecision(writer: *mut GEOSWKTWriter, precision: c_int);
    pub fn GEOSWKTWriter_create_r(handle: GEOSContextHandle_t) -> *mut GEOSWKTWriter;
    pub fn GEOSWKTWriter_destroy_r(handle: GEOSContextHandle_t, writer: *mut GEOSWKTWriter);
    pub fn GEOSWKTWriter_write_r(
        handle: GEOSContextHandle_t,
        writer: *mut GEOSWKTWriter,
        g: *const GEOSGeometry,
    ) -> *mut c_char;
    pub fn GEOSWKTWriter_setRoundingPrecision_r(
        handle: GEOSContextHandle_t,
        writer: *mut GEOSWKTWriter,
        precision: c_int,
    );
    pub fn GEOSWKTWriter_getOutputDimension(
        writer: *mut GEOSWKTWriter,
    ) -> c_int;
    pub fn GEOSWKTWriter_setOutputDimension(
        writer: *mut GEOSWKTWriter,
        dim: c_int,
    );
    pub fn GEOSWKTWriter_setTrim(
        writer: *mut GEOSWKTWriter,
        trim: c_char,
    );
    pub fn GEOSWKTWriter_setOld3D(
        writer: *mut GEOSWKTWriter,
        useOld3D: c_int,
    );

    pub fn GEOSFree(buffer: *mut c_void);
    pub fn GEOSFree_r(context: GEOSContextHandle_t, buffer: *mut c_void);

    pub fn GEOSPrepare(g: *const GEOSGeometry) -> *const GEOSPreparedGeometry;
    pub fn GEOSGeom_destroy(g: *mut GEOSGeometry);
    pub fn GEOSGeom_clone(g: *const GEOSGeometry) -> *mut GEOSGeometry;

    pub fn GEOSCoordSeq_create(size: c_uint, dims: c_uint) -> *mut GEOSCoordSequence;
    pub fn GEOSCoordSeq_destroy(s: *mut GEOSCoordSequence);
    pub fn GEOSCoordSeq_clone(s: *const GEOSCoordSequence) -> *mut GEOSCoordSequence;
    pub fn GEOSCoordSeq_setX(s: *mut GEOSCoordSequence, idx: c_uint, val: c_double) -> c_int;
    pub fn GEOSCoordSeq_setY(s: *mut GEOSCoordSequence, idx: c_uint, val: c_double) -> c_int;
    pub fn GEOSCoordSeq_setZ(s: *mut GEOSCoordSequence, idx: c_uint, val: c_double) -> c_int;
    pub fn GEOSCoordSeq_setOrdinate(
        s: *mut GEOSCoordSequence,
        idx: c_uint,
        dim: c_uint,
        val: c_double,
    ) -> c_int;
    pub fn GEOSCoordSeq_getX(
        s: *const GEOSCoordSequence,
        idx: c_uint,
        val: *mut c_double,
    ) -> c_int;
    pub fn GEOSCoordSeq_getY(
        s: *const GEOSCoordSequence,
        idx: c_uint,
        val: *mut c_double,
    ) -> c_int;
    pub fn GEOSCoordSeq_getZ(
        s: *const GEOSCoordSequence,
        idx: c_uint,
        val: *mut c_double,
    ) -> c_int;
    pub fn GEOSCoordSeq_getOrdinate(
        s: *const GEOSCoordSequence,
        idx: c_uint,
        dim: c_uint,
        val: *mut c_double,
    ) -> c_int;
    pub fn GEOSCoordSeq_getSize(s: *const GEOSCoordSequence, val: *mut c_uint) -> c_int;
    pub fn GEOSCoordSeq_getDimensions(s: *const GEOSCoordSequence, val: *mut c_uint) -> c_int;

    // Geometry must be a LineString, LinearRing or Point:
    pub fn GEOSGeom_getCoordSeq(g: *const GEOSGeometry) -> *const GEOSCoordSequence;

    // Geometry constructor:
    pub fn GEOSGeom_createPoint(s: *mut GEOSCoordSequence) -> *mut GEOSGeometry;
    pub fn GEOSGeom_createLineString(s: *mut GEOSCoordSequence) -> *mut GEOSGeometry;
    pub fn GEOSGeom_createLinearRing(s: *mut GEOSCoordSequence) -> *mut GEOSGeometry;
    pub fn GEOSGeom_createPolygon(
        shell: *mut GEOSGeometry,
        holes: *mut *mut GEOSGeometry,
        nholes: c_uint,
    ) -> *mut GEOSGeometry;
    pub fn GEOSGeom_createEmptyPolygon() -> *mut GEOSGeometry;
    pub fn GEOSGeom_createCollection(
        t: c_int,
        geoms: *mut *mut GEOSGeometry,
        ngeoms: c_uint,
    ) -> *mut GEOSGeometry;
    pub fn GEOSGeom_createEmptyCollection(type_: c_int) -> *mut GEOSGeometry;

    // Functions acting on GEOSGeometry:
    pub fn GEOSisEmpty(g: *const GEOSGeometry) -> c_char;
    pub fn GEOSisSimple(g: *const GEOSGeometry) -> c_char;
    pub fn GEOSisRing(g: *const GEOSGeometry) -> c_char;
    pub fn GEOSHasZ(g: *const GEOSGeometry) -> c_char;
    pub fn GEOSisClosed(g: *const GEOSGeometry) -> c_char;
    pub fn GEOSisValid(g: *const GEOSGeometry) -> c_char;
    pub fn GEOSisValidReason(g: *const GEOSGeometry) -> *mut c_char;

    pub fn GEOSGeomFromHEX_buf(
        hex: *const c_uchar,
        size: size_t,
    ) -> *mut GEOSGeometry;
    pub fn GEOSGeomToHEX_buf(
        g: *const GEOSGeometry,
        size: *mut size_t,
    ) -> *mut c_uchar;
    pub fn GEOSGeomFromWKB_buf(wkb: *const c_uchar, size: size_t) -> *mut GEOSGeometry;
    pub fn GEOSGeomToWKB_buf(g: *const GEOSGeometry, size: *mut size_t) -> *mut c_uchar;
    pub fn GEOSGeomTypeId(g: *const GEOSGeometry) -> c_int;
    pub fn GEOSArea(g: *const GEOSGeometry, area: *mut c_double) -> c_int;
    pub fn GEOSLength(g: *const GEOSGeometry, distance: *mut c_double) -> c_int;
    pub fn GEOSDistance(
        g1: *const GEOSGeometry,
        g2: *const GEOSGeometry,
        distance: *mut c_double,
    ) -> c_int;
    #[cfg(feature = "v3_7_0")]
    pub fn GEOSDistanceIndexed(
        g1: *const GEOSGeometry,
        g2: *const GEOSGeometry,
        distance: *mut c_double,
    ) -> c_int;
    pub fn GEOSHausdorffDistance(
        g1: *const GEOSGeometry,
        g2: *const GEOSGeometry,
        distance: *mut c_double,
    ) -> c_int;
    pub fn GEOSHausdorffDistanceDensify(
        g1: *const GEOSGeometry,
        g2: *const GEOSGeometry,
        density_frac: c_double,
        distance: *mut c_double,
    ) -> c_int;
    #[cfg(feature = "v3_7_0")]
    pub fn GEOSFrechetDistance(
        g1: *const GEOSGeometry,
        g2: *const GEOSGeometry,
        distance: *mut c_double,
    ) -> c_int;
    #[cfg(feature = "v3_7_0")]
    pub fn GEOSFrechetDistanceDensify(
        g1: *const GEOSGeometry,
        g2: *const GEOSGeometry,
        density_frace: c_double,
        distance: *mut c_double,
    ) -> c_int;
    pub fn GEOSGeomGetLength(g: *const GEOSGeometry, length: *mut c_double) -> c_int;
    pub fn GEOSGeomGetX(g: *const GEOSGeometry, x: *mut c_double) -> c_int;
    pub fn GEOSGeomGetY(g: *const GEOSGeometry, y: *mut c_double) -> c_int;
    #[cfg(feature = "v3_7_0")]
    pub fn GEOSGeomGetZ(g: *const GEOSGeometry, z: *mut c_double) -> c_int;
    pub fn GEOSGeomGetPointN(g: *const GEOSGeometry, n: c_int) -> *mut GEOSGeometry;
    pub fn GEOSGeomGetStartPoint(g: *const GEOSGeometry) -> *mut GEOSGeometry;
    pub fn GEOSGeomGetEndPoint(g: *const GEOSGeometry) -> *mut GEOSGeometry;
    pub fn GEOSNearestPoints(
        g1: *const GEOSGeometry,
        g2: *const GEOSGeometry,
    ) -> *mut GEOSCoordSequence;
    pub fn GEOSDisjoint(g1: *const GEOSGeometry, g2: *const GEOSGeometry) -> c_char;
    pub fn GEOSTouches(g1: *const GEOSGeometry, g2: *const GEOSGeometry) -> c_char;
    pub fn GEOSIntersects(g1: *const GEOSGeometry, g2: *const GEOSGeometry) -> c_char;
    pub fn GEOSCrosses(g1: *const GEOSGeometry, g2: *const GEOSGeometry) -> c_char;
    pub fn GEOSWithin(g1: *const GEOSGeometry, g2: *const GEOSGeometry) -> c_char;
    pub fn GEOSContains(g1: *const GEOSGeometry, g2: *const GEOSGeometry) -> c_char;
    pub fn GEOSOverlaps(g1: *const GEOSGeometry, g2: *const GEOSGeometry) -> c_char;
    pub fn GEOSEquals(g1: *const GEOSGeometry, g2: *const GEOSGeometry) -> c_char;
    pub fn GEOSEqualsExact(
        g1: *const GEOSGeometry,
        g2: *const GEOSGeometry,
        tolerance: c_double,
    ) -> c_char;
    pub fn GEOSCovers(g1: *const GEOSGeometry, g2: *const GEOSGeometry) -> c_char;
    pub fn GEOSCoveredBy(g1: *const GEOSGeometry, g2: *const GEOSGeometry) -> c_char;

    pub fn GEOSBuffer(
        g: *const GEOSGeometry,
        width: c_double,
        quadsegs: c_int,
    ) -> *mut GEOSGeometry;
    pub fn GEOSBufferParams_create() -> *mut GEOSBufferParams;
    pub fn GEOSBufferParams_destroy(params: *mut GEOSBufferParams);
    pub fn GEOSBufferParams_setEndCapStyle(p: *mut GEOSBufferParams, style: c_int) -> c_int;
    pub fn GEOSBufferParams_setJoinStyle(p: *mut GEOSBufferParams, joinStyle: c_int) -> c_int;
    pub fn GEOSBufferParams_setMitreLimit(p: *mut GEOSBufferParams, mitreLimit: c_double) -> c_int;
    pub fn GEOSBufferParams_setQuadrantSegments(p: *mut GEOSBufferParams, quadSegs: c_int) -> c_int;
    pub fn GEOSBufferParams_setSingleSided(p: *mut GEOSBufferParams, singleSided: c_int) -> c_int;
    pub fn GEOSBufferWithParams(
        g: *const GEOSGeometry,
        p: *const GEOSBufferParams,
        width: c_double,
    ) -> *mut GEOSGeometry;
    pub fn GEOSBufferWithStyle(
        g: *const GEOSGeometry,
        width: c_double,
        quadSegs: c_int,
        endCapStyle: c_int,
        joinStyle: c_int,
        mitreLimit: c_double,
    ) -> *mut GEOSGeometry;
